# GL_ThreadedRendering

./: .gitignore  CMakeLists.txt  gl_rendering_thread_test.cpp  gl_test.cpp  main.cpp  readme.md  todos.txt
core/: Camera.cpp  Camera.h  EngineCore.cpp  EngineCore.h  GLContext.cpp  GLContext.h  Geometry.h  InputSystem.cpp  InputSystem.h  Logger.cpp  Logger.h  Object.cpp  Object.h  RenderingThread.cpp  RenderingThread.h  Scene.cpp  Scene.h  Shaders.cpp  Shaders.h  TextureLoader.cpp  TextureLoader.h  Vertex.h
experiments/: CMakeLists.txt
experiments/rendering_thread/: CMakeLists.txt  RObject.cpp  RObject.h  gl_rendering_thread_test.cpp
shaders/: shader.fs  shader.ps  shader.vs  shader_2.fs  shader_2.vs  test_frag.fs  test_vert.vs
test/: CMakeLists.txt  test_main.cpp
test/core/: CMakeLists.txt  test_Scene.cpp
test/utils/: CMakeLists.txt  test_IO.cpp  test_Logger.cpp  test_simple.cpp
utils/: IO.cpp  IO.h  Logger.cpp  Logger.h
